Added tooltips for action buttons.

--- a/src/main/resources/locale/ar_TN/furqan.properties
+++ b/src/main/resources/locale/ar_TN/furqan.properties
@@ -6,3 +6,8 @@ previousSura = السورة السابقة
 itsOrder = ترتيبها
 itsAyat = آياتها
 sura = سورة
+
+# Action menu
+copySura = نسخ نص السورة
+printSura = طبع السورة
+about = عن البرنامج
